<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="676dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="54dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText11"
                android:layout_width="57dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/background_dark"
                android:textColorHighlight="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstTitleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondTitleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText12"
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/company"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstCompanyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondCompanyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText13"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/location"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstLocationID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondLocationID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText14"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/yearly_salary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstYearlySalaryID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondYearlySalaryID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText18"
                android:layout_width="109dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/signing_bonus"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstSigningBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondSigningBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText21"
                android:layout_width="109dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/yearly_bonus"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstYearlyBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondYearlyBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/retirement_benefits"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstRetirementBenefitID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondRetirementBenefitID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText28"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/leave_time"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstLeaveTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondLeaveTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jobcomp_anotherComparisonButtonID"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:text="@string/another_comparison_button" />

            <Button
                android:id="@+id/jobcomp_cancelButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>